--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-    <h1>NISHITA ERVANTIKAR</h1>
-    <hr>
-    <h3></h3>
+
+<body >
+  <center>
+    
+
+<!--   Image -->
+<img src="NishPic.jpg"  height="300px">
+  </center>
+<!-- Heading -->
+  <center><h1>Nishita Ervantikar</h1></center>
+
+<!--   Table -->
+<table>
+  <tr>
+    
+    <td><div><center><h3 >Education</h3></center>
+      <ol>
+        <li>Primary-<a href="http://atkinsongollapudi.edu.in/">Atkinson High School, Vijayawada</a></li>
+        <li >Secondary-<a href="https://lotusschool.in/">Lotus National School, Hyderabad</a></li>
+          <li >High School-<a href="https://www.meluhaedu.com/">Meluha International School, Hyderabad</a></li>
+          <li >Bachelors-<a href="https://www.ifheindia.org/">ICFAI Foundation for Higher Education, Hyd</a></li>
+      </ol></div>
+    </td>
+    <td><div><center><h3 >Family</h3></center>
+      <ol>
+        <li><a href="http://atkinsongollapudi.edu.in/">Papa</a></li>
+        <li ><a href="https://lotusschool.in/">Maa</a></li>
+          <li ><a href="https://www.meluhaedu.com/">Rishica</a></li>
+          <li ><a href="https://www.ifheindia.org/">Choti</a></li>
+          <li ><a href="https://www.ifheindia.org/">Nishchay</a></li>
+      </ol></div>
+    </td>
+  </tr>
+</table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+  <script src="script.js"></script>
+  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
 </body>
+
 </html>
